[gd_scene load_steps=5 format=3 uid="uid://c27h6kb4hpx3w"]

[ext_resource type="Script" uid="uid://dnh12e77ns345" path="res://scripts/Gameplay/MissionController.gd" id="2_toeab"]
[ext_resource type="Script" uid="uid://dygfy71wtck8y" path="res://scripts/UI/VisualizadorAlgoritmo.gd" id="3_j5gw1"]
[ext_resource type="Script" uid="uid://qftlro370sqx" path="res://scripts/Gameplay/boot.gd" id="4_pmrx8"]
[ext_resource type="Script" uid="uid://b3qg66qiufhfy" path="res://scripts/Gameplay/GameManager.gd" id="5_toeab"]

[node name="World" type="Node2D"]
script = ExtResource("5_toeab")

[node name="MissionController" type="Node" parent="."]
script = ExtResource("2_toeab")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VisualizadorAlgoritmo" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_j5gw1")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="UI/VisualizadorAlgoritmo"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BFS_BUTTON" type="Button" parent="UI/VisualizadorAlgoritmo/Panel"]
layout_mode = 0
offset_left = 1636.0
offset_top = 699.0
offset_right = 1781.0
offset_bottom = 772.0
text = "BFS"

[node name="DFS_BUTTON" type="Button" parent="UI/VisualizadorAlgoritmo/Panel"]
layout_mode = 0
offset_left = 1637.0
offset_top = 857.0
offset_right = 1771.0
offset_bottom = 930.0
text = "DFS"

[node name="Close_button" type="Button" parent="UI/VisualizadorAlgoritmo/Panel"]
layout_mode = 0
offset_left = 688.0
offset_top = 909.0
offset_right = 1140.0
offset_bottom = 964.0
text = "Cerrar"

[node name="ClueLabel" type="Label" parent="UI/VisualizadorAlgoritmo/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="MinimapContainer" type="Panel" parent="UI/VisualizadorAlgoritmo"]
layout_mode = 0
offset_left = 48.0
offset_top = 23.0
offset_right = 695.0
offset_bottom = 372.0

[node name="TerminalPanel" type="VBoxContainer" parent="UI/VisualizadorAlgoritmo"]
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15100001
anchor_bottom = 0.18800001
offset_left = 1336.0
offset_top = 47.0
offset_right = 1458.08
offset_bottom = 169.95999

[node name="ChallengeLabel" type="Label" parent="UI/VisualizadorAlgoritmo/TerminalPanel"]
layout_mode = 2
text = "Network Tracer"

[node name="InputLine" type="LineEdit" parent="UI/VisualizadorAlgoritmo/TerminalPanel"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="UI/VisualizadorAlgoritmo/TerminalPanel"]
layout_mode = 2
text = "enviar c√≥digo"

[node name="FeedbackLabel" type="Label" parent="UI/VisualizadorAlgoritmo/TerminalPanel"]
layout_mode = 2

[node name="LevelContainer" type="Node" parent="."]

[node name="boot" type="Node" parent="."]
script = ExtResource("4_pmrx8")

[connection signal="pressed" from="UI/VisualizadorAlgoritmo/Panel/BFS_BUTTON" to="UI/VisualizadorAlgoritmo" method="_on_bfs_button_pressed"]
[connection signal="pressed" from="UI/VisualizadorAlgoritmo/Panel/DFS_BUTTON" to="UI/VisualizadorAlgoritmo" method="_on_dfs_button_pressed"]
[connection signal="pressed" from="UI/VisualizadorAlgoritmo/Panel/Close_button" to="UI/VisualizadorAlgoritmo" method="_on_close_button_pressed"]
